--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" type="image/svg+xml" href="/public/favicon.webp">
+  <link rel="icon" type="image/svg+xml" href="/favicon.webp">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
     content="With MeetMauritius you can explore Mauritius island with the best guide and taxi driver, Anju">
